src/test/ui/pattern/usefulness/doc-hidden-non-exhaustive.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/doc-hidden-non-exhaustive.rs:8:11
   |
LL |     match Foo::A {
   |           ^^^^^^ pattern `_` not covered
   |
note: `Foo` defined here
  --> $DIR/auxiliary/hidden.rs:1:1
   |
LL | / pub enum Foo {
LL | |     A,
LL | |     B,
LL | |     #[doc(hidden)]
LL | |     C,
LL | | }
   | |_^
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Foo::B => {}
LL +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `B` not covered
  --> $DIR/doc-hidden-non-exhaustive.rs:14:11
   |
LL |     match Foo::A {
   |           ^^^^^^ pattern `B` not covered
   |
note: `Foo` defined here
  --> $DIR/auxiliary/hidden.rs:3:5
   |
LL | / pub enum Foo {
LL | |     A,
LL | |     B,
   | |     ^ not covered
LL | |     #[doc(hidden)]
LL | |     C,
LL | | }
   | |_-
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Foo::C => {}
LL +         B => todo!()
   |

error[E0004]: non-exhaustive patterns: `B` and `_` not covered
  --> $DIR/doc-hidden-non-exhaustive.rs:20:11
   |
LL |     match Foo::A {
   |           ^^^^^^ patterns `B` and `_` not covered
   |
note: `Foo` defined here
  --> $DIR/auxiliary/hidden.rs:3:5
   |
LL | / pub enum Foo {
LL | |     A,
LL | |     B,
   | |     ^ not covered
LL | |     #[doc(hidden)]
LL | |     C,
LL | | }
   | |_-
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         Foo::A => {}
LL +         B | _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `Some(B)` and `Some(_)` not covered
  --> $DIR/doc-hidden-non-exhaustive.rs:25:11
   |
LL |     match None {
   |           ^^^^ patterns `Some(B)` and `Some(_)` not covered
   |
note: `Option<Foo>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | / pub enum Option<T> {
LL | |     /// No value.
LL | |     #[lang = "None"]
LL | |     #[stable(feature = "rust1", since = "1.0.0")]
...  |
LL | |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
   | |     ^^^^ not covered
LL | | }
   | |_-
   = note: the matched value is of type `Option<Foo>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         Some(Foo::A) => {}
LL +         Some(B) | Some(_) => todo!()
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
